syntax = "proto3";

package notification;


service NotificationService {
    rpc SendOTP(OTPRequest) returns (NotificationResponse);
    rpc VerifyOTP(VerifyOTPRequest) returns (NotificationResponse);
    rpc ForgotPassword(ForgotPasswordRequest) returns (NotificationResponse);
    rpc GetANotification(GetNotificationRequest) returns (Notification);
    rpc GetAllNotifications(GetAllNotificationsRequest) returns (GetAllNotificationsResponse);
    rpc MarkAsRead(MarkNotificationRequest) returns (NotificationResponse);
    rpc MarkAllAsRead(MarkAllNotificationsRequest) returns (NotificationResponse);
}

message VerifyOTPRequest {
    string email = 2;   // Email address
    string otp = 3;     // OTP code to verify
}

message ForgotPasswordRequest {
    string user_id = 1; // User ID
    string email = 2;   // Email address
    string reset_link = 3; // Password reset link
}

message OTPRequest {
    string user_id = 1;
    string email = 2;
    string username = 3;
}

message GetNotificationRequest {
    string notification_id = 1;
    string user_id = 2;
}

message GetAllNotificationsRequest {
    string user_id = 1;
    int32 page = 2;
    int32 page_size = 3;
    bool is_read = 4; // Filter by read status
    string type = 5;  // Filter by notification type
}

message MarkNotificationRequest {
    string notification_id = 1;
    string user_id = 2;
}

message MarkAllNotificationsRequest {
    string user_id = 1;
}

message NotificationResponse {
    bool success = 1;   // Indicates success or failure
    string message = 2; // Response message
}

message Notification {
    string id = 1;
    string user_id = 2;
    string type = 3;
    string subject = 4;
    string body = 5;
    string recipient = 6;
    bool is_read = 7;
    string created_at = 8;
}

message GetAllNotificationsResponse {
    repeated Notification notifications = 1;
    int32 total = 2;
    int32 page = 3;
    int32 page_size = 4;
}